# scp079ai

./: README.md
scp079/: README.md  config.yaml  pyproject.toml
scp079/data/: memory.db
scp079/src/: config.py  main.py
scp079/src/agent/: core.py  personality.py  state.py
scp079/src/llm/: base.py  deepseek.py
scp079/src/memory/: long_term.py  short_term.py
scp079/src/tools/: base.py  files.py  reflection.py  shell.py  web.py
scp079/src/ui/: effects.py  fonts.py  renderer.py  sounds.py  video_player.py  window.py
